[gd_scene load_steps=4 format=2]

[ext_resource path="res://Font/Font.tres" type="DynamicFont" id=1]
[ext_resource path="res://Scripts/GameOver.gd" type="Script" id=2]
[ext_resource path="res://Sounds/Game_Over.wav" type="AudioStream" id=3]

[node name="GameOver" type="Popup"]
pause_mode = 2
margin_right = 320.0
margin_bottom = 180.0
popup_exclusive = true
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="."]
margin_left = 60.0
margin_top = 30.0
margin_right = 260.0
margin_bottom = 150.0
color = Color( 0.313726, 0.313726, 0.313726, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Info" type="ColorRect" parent="."]
margin_left = 70.0
margin_top = 40.0
margin_right = 190.0
margin_bottom = 140.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Info"]
margin_right = 120.0
margin_bottom = 20.0
custom_fonts/font = ExtResource( 1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "GAME OVER"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label_level" type="Label" parent="Info"]
margin_left = 10.0
margin_top = 20.0
margin_right = 70.0
margin_bottom = 40.0
custom_fonts/font = ExtResource( 1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "LEVEL: "
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label_lev" type="Label" parent="Info"]
margin_left = 70.0
margin_top = 20.0
margin_right = 110.0
margin_bottom = 40.0
custom_fonts/font = ExtResource( 1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
align = 2
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label_artifacts" type="Label" parent="Info"]
margin_left = 10.0
margin_top = 40.0
margin_right = 70.0
margin_bottom = 60.0
custom_fonts/font = ExtResource( 1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "ARTIFACTS: "
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label_art" type="Label" parent="Info"]
margin_left = 70.0
margin_top = 40.0
margin_right = 110.0
margin_bottom = 60.0
custom_fonts/font = ExtResource( 1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
align = 2
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label_score2" type="Label" parent="Info"]
margin_left = 10.0
margin_top = 75.0
margin_right = 70.0
margin_bottom = 95.0
custom_fonts/font = ExtResource( 1 )
custom_colors/font_color = Color( 0.745098, 0.0196078, 0.0196078, 1 )
custom_colors/font_outline_modulate = Color( 0, 0, 0, 1 )
text = "SCORE:"
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label_sco" type="Label" parent="Info"]
margin_left = 70.0
margin_top = 75.0
margin_right = 110.0
margin_bottom = 95.0
custom_fonts/font = ExtResource( 1 )
custom_colors/font_color = Color( 0.745098, 0.0196078, 0.0196078, 1 )
custom_colors/font_outline_modulate = Color( 0, 0, 0, 1 )
align = 2
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Restart" type="ColorRect" parent="."]
margin_left = 200.0
margin_top = 50.0
margin_right = 250.0
margin_bottom = 70.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Restart"]
margin_right = 50.0
margin_bottom = 20.0
custom_fonts/font = ExtResource( 1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "RESTART"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Menu" type="ColorRect" parent="."]
margin_left = 200.0
margin_top = 80.0
margin_right = 250.0
margin_bottom = 100.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Menu"]
margin_right = 50.0
margin_bottom = 20.0
custom_fonts/font = ExtResource( 1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "MENU"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Quit" type="ColorRect" parent="."]
margin_left = 200.0
margin_top = 110.0
margin_right = 250.0
margin_bottom = 130.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Quit"]
margin_right = 50.0
margin_bottom = 20.0
custom_fonts/font = ExtResource( 1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "QUIT"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SoundGameOver" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 3 )
